# beating-blas

./: CMakeLists.txt  Makefile  README.md  main  main.cpp  timeit.hpp  xnordot.hpp  xnorgemm.hpp
benchmarks/: benchmark_graph.py
